--- a/2.6/jemalloc-stretch-slim/Dockerfile
+++ b/2.6/jemalloc-stretch-slim/Dockerfile
@@ -3,11 +3,13 @@ FROM debian:stretch-slim
 ARG RUBY_VERSION=2.6.3-jemalloc
 
 RUN apt-get update -q \
+    && apt-get dist-upgrade --assume-yes \
     && apt-get install --assume-yes -q --no-install-recommends curl gnupg apt-transport-https ca-certificates \
     && curl -SLf https://raw.githubusercontent.com/fullstaq-labs/fullstaq-ruby-server-edition/master/fullstaq-ruby.asc | apt-key add - \
     && echo "deb https://apt.fullstaqruby.org debian-9 main" > /etc/apt/sources.list.d/fullstaq-ruby.list \
     && apt-get update -q \
     && apt-get install --assume-yes -q --no-install-recommends fullstaq-ruby-${RUBY_VERSION} \
+    && apt-get autoremove --assume-yes \
     && rm -fr /var/cache/apt
 
 ENV GEM_HOME /usr/local/bundle
