--- a/2.6/jemalloc-stretch/Dockerfile
+++ b/2.6/jemalloc-stretch/Dockerfile
@@ -2,14 +2,21 @@ FROM debian:stretch
 
 ARG RUBY_VERSION=2.6.5-jemalloc
 
+# RUN with pipe recommendation: https://github.com/hadolint/hadolint/wiki/DL4006
+SHELL ["/bin/bash", "-o", "pipefail", "-c"]
 RUN apt-get update -q \
     && apt-get dist-upgrade --assume-yes \
-    && apt-get install --assume-yes -q --no-install-recommends curl gnupg apt-transport-https ca-certificates \
+    && apt-get install --assume-yes -q --no-install-recommends \
+      curl \
+      gnupg \
+      apt-transport-https \
+      ca-certificates \
     && curl -SLf https://raw.githubusercontent.com/fullstaq-labs/fullstaq-ruby-server-edition/master/fullstaq-ruby.asc | apt-key add - \
     && echo "deb https://apt.fullstaqruby.org debian-9 main" > /etc/apt/sources.list.d/fullstaq-ruby.list \
     && apt-get update -q \
     && apt-get install --assume-yes -q --no-install-recommends fullstaq-ruby-${RUBY_VERSION} \
     && apt-get autoremove --assume-yes \
+    && rm -rf /var/lib/apt/lists \
     && rm -fr /var/cache/apt
 
 ENV GEM_HOME /usr/local/bundle
