--- a/.github/workflows/build-push.yml
+++ b/.github/workflows/build-push.yml
@@ -17,6 +17,54 @@ jobs:
       matrix:
         include:
 
+          # 3.0.1 on Debian 10
+          - ruby-version:   "3.0.1"
+            ruby-variant:   "jemalloc"
+            debian-image:   "buster"
+            debian-version: "10"
+            aliases:  |
+              quay.io/evl.ms/fullstaq-ruby:3.0.1-jemalloc
+              quay.io/evl.ms/fullstaq-ruby:3.0-jemalloc
+          - ruby-version:   "3.0.1"
+            ruby-variant:   "jemalloc"
+            debian-image:   "buster-slim"
+            debian-version: "10"
+            aliases: |
+              quay.io/evl.ms/fullstaq-ruby:3.0.1-jemalloc-slim
+              quay.io/evl.ms/fullstaq-ruby:3.0-jemalloc-slim
+          - ruby-version:   "3.0.1"
+            ruby-variant:   "malloctrim"
+            debian-image:   "buster"
+            debian-version: "10"
+            aliases:  |
+              quay.io/evl.ms/fullstaq-ruby:3.0.1-malloctrim
+              quay.io/evl.ms/fullstaq-ruby:3.0-malloctrim
+          - ruby-version:   "3.0.1"
+            ruby-variant:   "malloctrim"
+            debian-image:   "buster-slim"
+            debian-version: "10"
+            aliases: |
+              quay.io/evl.ms/fullstaq-ruby:3.0.1-malloctrim-slim
+              quay.io/evl.ms/fullstaq-ruby:3.0-malloctrim-slim
+
+          # 3.0.1 on Debian 9
+          - ruby-version:   "3.0.1"
+            ruby-variant:   "jemalloc"
+            debian-image:   "stretch"
+            debian-version: "9"
+          - ruby-version:   "3.0.1"
+            ruby-variant:   "jemalloc"
+            debian-image:   "stretch-slim"
+            debian-version: "9"
+          - ruby-version:   "3.0.1"
+            ruby-variant:   "malloctrim"
+            debian-image:   "stretch"
+            debian-version: "9"
+          - ruby-version:   "3.0.1"
+            ruby-variant:   "malloctrim"
+            debian-image:   "stretch-slim"
+            debian-version: "9"
+
           # 3.0.0 on Debian 10
           - ruby-version:   "3.0.0"
             ruby-variant:   "jemalloc"
@@ -24,28 +72,24 @@ jobs:
             debian-version: "10"
             aliases:  |
               quay.io/evl.ms/fullstaq-ruby:3.0.0-jemalloc
-              quay.io/evl.ms/fullstaq-ruby:3.0-jemalloc
           - ruby-version:   "3.0.0"
             ruby-variant:   "jemalloc"
             debian-image:   "buster-slim"
             debian-version: "10"
             aliases: |
               quay.io/evl.ms/fullstaq-ruby:3.0.0-jemalloc-slim
-              quay.io/evl.ms/fullstaq-ruby:3.0-jemalloc-slim
           - ruby-version:   "3.0.0"
             ruby-variant:   "malloctrim"
             debian-image:   "buster"
             debian-version: "10"
             aliases:  |
               quay.io/evl.ms/fullstaq-ruby:3.0.0-malloctrim
-              quay.io/evl.ms/fullstaq-ruby:3.0-malloctrim
           - ruby-version:   "3.0.0"
             ruby-variant:   "malloctrim"
             debian-image:   "buster-slim"
             debian-version: "10"
             aliases: |
               quay.io/evl.ms/fullstaq-ruby:3.0.0-malloctrim-slim
-              quay.io/evl.ms/fullstaq-ruby:3.0-malloctrim-slim
 
           # 3.0.0 on Debian 9
           - ruby-version:   "3.0.0"
@@ -180,7 +224,7 @@ jobs:
             ${{ runner.os }}-buildx-dev
       - name: Login to Quay.io
         if:   github.event_name != 'pull_request'
-        uses: docker/login-action@v1 
+        uses: docker/login-action@v1
         with:
           registry: quay.io
           username: ${{ secrets.QUAY_USERNAME }}
