--- a/.github/workflows/build-push.yml
+++ b/.github/workflows/build-push.yml
@@ -17,6 +17,54 @@ jobs:
       matrix:
         include:
 
+          # 3.0.1 on Debian 10
+          - ruby-version:   "3.0.1"
+            ruby-variant:   "jemalloc"
+            debian-image:   "buster"
+            debian-version: "10"
+            aliases:  |
+              quay.io/evl.ms/fullstaq-ruby:3.0.1-jemalloc
+              quay.io/evl.ms/fullstaq-ruby:3.0-jemalloc
+          - ruby-version:   "3.0.1"
+            ruby-variant:   "jemalloc"
+            debian-image:   "buster-slim"
+            debian-version: "10"
+            aliases: |
+              quay.io/evl.ms/fullstaq-ruby:3.0.1-jemalloc-slim
+              quay.io/evl.ms/fullstaq-ruby:3.0-jemalloc-slim
+          - ruby-version:   "3.0.1"
+            ruby-variant:   "malloctrim"
+            debian-image:   "buster"
+            debian-version: "10"
+            aliases:  |
+              quay.io/evl.ms/fullstaq-ruby:3.0.1-malloctrim
+              quay.io/evl.ms/fullstaq-ruby:3.0-malloctrim
+          - ruby-version:   "3.0.1"
+            ruby-variant:   "malloctrim"
+            debian-image:   "buster-slim"
+            debian-version: "10"
+            aliases: |
+              quay.io/evl.ms/fullstaq-ruby:3.0.1-malloctrim-slim
+              quay.io/evl.ms/fullstaq-ruby:3.0-malloctrim-slim
+
+          # 3.0.1 on Debian 9
+          - ruby-version:   "3.0.1"
+            ruby-variant:   "jemalloc"
+            debian-image:   "stretch"
+            debian-version: "9"
+          - ruby-version:   "3.0.1"
+            ruby-variant:   "jemalloc"
+            debian-image:   "stretch-slim"
+            debian-version: "9"
+          - ruby-version:   "3.0.1"
+            ruby-variant:   "malloctrim"
+            debian-image:   "stretch"
+            debian-version: "9"
+          - ruby-version:   "3.0.1"
+            ruby-variant:   "malloctrim"
+            debian-image:   "stretch-slim"
+            debian-version: "9"
+
           # 3.0.0 on Debian 10
           - ruby-version:   "3.0.0"
             ruby-variant:   "jemalloc"
@@ -24,28 +72,24 @@ jobs:
             debian-version: "10"
             aliases:  |
               quay.io/evl.ms/fullstaq-ruby:3.0.0-jemalloc
-              quay.io/evl.ms/fullstaq-ruby:3.0-jemalloc
           - ruby-version:   "3.0.0"
             ruby-variant:   "jemalloc"
             debian-image:   "buster-slim"
             debian-version: "10"
             aliases: |
               quay.io/evl.ms/fullstaq-ruby:3.0.0-jemalloc-slim
-              quay.io/evl.ms/fullstaq-ruby:3.0-jemalloc-slim
           - ruby-version:   "3.0.0"
             ruby-variant:   "malloctrim"
             debian-image:   "buster"
             debian-version: "10"
             aliases:  |
               quay.io/evl.ms/fullstaq-ruby:3.0.0-malloctrim
-              quay.io/evl.ms/fullstaq-ruby:3.0-malloctrim
           - ruby-version:   "3.0.0"
             ruby-variant:   "malloctrim"
             debian-image:   "buster-slim"
             debian-version: "10"
             aliases: |
               quay.io/evl.ms/fullstaq-ruby:3.0.0-malloctrim-slim
-              quay.io/evl.ms/fullstaq-ruby:3.0-malloctrim-slim
 
           # 3.0.0 on Debian 9
           - ruby-version:   "3.0.0"
@@ -65,6 +109,54 @@ jobs:
             debian-image:   "stretch-slim"
             debian-version: "9"
 
+          # 2.7.3 on Debian 10
+          - ruby-version:   "2.7.3"
+            ruby-variant:   "jemalloc"
+            debian-image:   "buster"
+            debian-version: "10"
+            aliases:  |
+              quay.io/evl.ms/fullstaq-ruby:2.7.3-jemalloc
+              quay.io/evl.ms/fullstaq-ruby:2.7-jemalloc
+          - ruby-version:   "2.7.3"
+            ruby-variant:   "jemalloc"
+            debian-image:   "buster-slim"
+            debian-version: "10"
+            aliases: |
+              quay.io/evl.ms/fullstaq-ruby:2.7.3-jemalloc-slim
+              quay.io/evl.ms/fullstaq-ruby:2.7-jemalloc-slim
+          - ruby-version:   "2.7.3"
+            ruby-variant:   "malloctrim"
+            debian-image:   "buster"
+            debian-version: "10"
+            aliases:  |
+              quay.io/evl.ms/fullstaq-ruby:2.7.3-malloctrim
+              quay.io/evl.ms/fullstaq-ruby:2.7-malloctrim
+          - ruby-version:   "2.7.3"
+            ruby-variant:   "malloctrim"
+            debian-image:   "buster-slim"
+            debian-version: "10"
+            aliases: |
+              quay.io/evl.ms/fullstaq-ruby:2.7.3-malloctrim-slim
+              quay.io/evl.ms/fullstaq-ruby:2.7-malloctrim-slim
+
+          # 2.7.3 on Debian 9
+          - ruby-version:   "2.7.3"
+            ruby-variant:   "jemalloc"
+            debian-image:   "stretch"
+            debian-version: "9"
+          - ruby-version:   "2.7.3"
+            ruby-variant:   "jemalloc"
+            debian-image:   "stretch-slim"
+            debian-version: "9"
+          - ruby-version:   "2.7.3"
+            ruby-variant:   "malloctrim"
+            debian-image:   "stretch"
+            debian-version: "9"
+          - ruby-version:   "2.7.3"
+            ruby-variant:   "malloctrim"
+            debian-image:   "stretch-slim"
+            debian-version: "9"
+
           # 2.7.2 on Debian 10
           - ruby-version:   "2.7.2"
             ruby-variant:   "jemalloc"
@@ -72,28 +164,24 @@ jobs:
             debian-version: "10"
             aliases:  |
               quay.io/evl.ms/fullstaq-ruby:2.7.2-jemalloc
-              quay.io/evl.ms/fullstaq-ruby:2.7-jemalloc
           - ruby-version:   "2.7.2"
             ruby-variant:   "jemalloc"
             debian-image:   "buster-slim"
             debian-version: "10"
             aliases: |
               quay.io/evl.ms/fullstaq-ruby:2.7.2-jemalloc-slim
-              quay.io/evl.ms/fullstaq-ruby:2.7-jemalloc-slim
           - ruby-version:   "2.7.2"
             ruby-variant:   "malloctrim"
             debian-image:   "buster"
             debian-version: "10"
             aliases:  |
               quay.io/evl.ms/fullstaq-ruby:2.7.2-malloctrim
-              quay.io/evl.ms/fullstaq-ruby:2.7-malloctrim
           - ruby-version:   "2.7.2"
             ruby-variant:   "malloctrim"
             debian-image:   "buster-slim"
             debian-version: "10"
             aliases: |
               quay.io/evl.ms/fullstaq-ruby:2.7.2-malloctrim-slim
-              quay.io/evl.ms/fullstaq-ruby:2.7-malloctrim-slim
 
           # 2.7.2 on Debian 9
           - ruby-version:   "2.7.2"
@@ -113,6 +201,54 @@ jobs:
             debian-image:   "stretch-slim"
             debian-version: "9"
 
+          # 2.6.7 on Debian 10
+          - ruby-version:   "2.6.7"
+            ruby-variant:   "jemalloc"
+            debian-image:   "buster"
+            debian-version: "10"
+            aliases:  |
+              quay.io/evl.ms/fullstaq-ruby:2.6.7-jemalloc
+              quay.io/evl.ms/fullstaq-ruby:2.6-jemalloc
+          - ruby-version:   "2.6.7"
+            ruby-variant:   "jemalloc"
+            debian-image:   "buster-slim"
+            debian-version: "10"
+            aliases: |
+              quay.io/evl.ms/fullstaq-ruby:2.6.7-jemalloc-slim
+              quay.io/evl.ms/fullstaq-ruby:2.6-jemalloc-slim
+          - ruby-version:   "2.6.7"
+            ruby-variant:   "malloctrim"
+            debian-image:   "buster"
+            debian-version: "10"
+            aliases:  |
+              quay.io/evl.ms/fullstaq-ruby:2.6.7-malloctrim
+              quay.io/evl.ms/fullstaq-ruby:2.6-malloctrim
+          - ruby-version:   "2.6.7"
+            ruby-variant:   "malloctrim"
+            debian-image:   "buster-slim"
+            debian-version: "10"
+            aliases: |
+              quay.io/evl.ms/fullstaq-ruby:2.6.7-malloctrim-slim
+              quay.io/evl.ms/fullstaq-ruby:2.6-malloctrim-slim
+
+          # 2.6.7 on Debian 9
+          - ruby-version:   "2.6.7"
+            ruby-variant:   "jemalloc"
+            debian-image:   "stretch"
+            debian-version: "9"
+          - ruby-version:   "2.6.7"
+            ruby-variant:   "jemalloc"
+            debian-image:   "stretch-slim"
+            debian-version: "9"
+          - ruby-version:   "2.6.7"
+            ruby-variant:   "malloctrim"
+            debian-image:   "stretch"
+            debian-version: "9"
+          - ruby-version:   "2.6.7"
+            ruby-variant:   "malloctrim"
+            debian-image:   "stretch-slim"
+            debian-version: "9"
+
           # 2.6.6 on Debian 10
           - ruby-version:   "2.6.6"
             ruby-variant:   "jemalloc"
@@ -120,28 +256,24 @@ jobs:
             debian-version: "10"
             aliases:  |
               quay.io/evl.ms/fullstaq-ruby:2.6.6-jemalloc
-              quay.io/evl.ms/fullstaq-ruby:2.6-jemalloc
           - ruby-version:   "2.6.6"
             ruby-variant:   "jemalloc"
             debian-image:   "buster-slim"
             debian-version: "10"
             aliases: |
               quay.io/evl.ms/fullstaq-ruby:2.6.6-jemalloc-slim
-              quay.io/evl.ms/fullstaq-ruby:2.6-jemalloc-slim
           - ruby-version:   "2.6.6"
             ruby-variant:   "malloctrim"
             debian-image:   "buster"
             debian-version: "10"
             aliases:  |
               quay.io/evl.ms/fullstaq-ruby:2.6.6-malloctrim
-              quay.io/evl.ms/fullstaq-ruby:2.6-malloctrim
           - ruby-version:   "2.6.6"
             ruby-variant:   "malloctrim"
             debian-image:   "buster-slim"
             debian-version: "10"
             aliases: |
               quay.io/evl.ms/fullstaq-ruby:2.6.6-malloctrim-slim
-              quay.io/evl.ms/fullstaq-ruby:2.6-malloctrim-slim
 
           # 2.6.6 on Debian 9
           - ruby-version:   "2.6.6"
@@ -180,7 +312,7 @@ jobs:
             ${{ runner.os }}-buildx-dev
       - name: Login to Quay.io
         if:   github.event_name != 'pull_request'
-        uses: docker/login-action@v1 
+        uses: docker/login-action@v1
         with:
           registry: quay.io
           username: ${{ secrets.QUAY_USERNAME }}
