--- a/.github/workflows/build-push.yml
+++ b/.github/workflows/build-push.yml
@@ -17,6 +17,72 @@ jobs:
       matrix:
         include:
 
+          # 3.2.0 on Debian 11
+          - ruby-version:   "3.2.0"
+            ruby-variant:   "jemalloc"
+            debian-image:   "bullseye"
+            debian-version: "11"
+            aliases:  |
+              quay.io/evl.ms/fullstaq-ruby:3.2.0-jemalloc
+              quay.io/evl.ms/fullstaq-ruby:3.2-jemalloc
+          - ruby-version:   "3.2.0"
+            ruby-variant:   "jemalloc"
+            debian-image:   "bullseye-slim"
+            debian-version: "11"
+            aliases: |
+              quay.io/evl.ms/fullstaq-ruby:3.2.0-jemalloc-slim
+              quay.io/evl.ms/fullstaq-ruby:3.2-jemalloc-slim
+          - ruby-version:   "3.2.0"
+            ruby-variant:   "malloctrim"
+            debian-image:   "bullseye"
+            debian-version: "11"
+            aliases:  |
+              quay.io/evl.ms/fullstaq-ruby:3.2.0-malloctrim
+              quay.io/evl.ms/fullstaq-ruby:3.2-malloctrim
+          - ruby-version:   "3.2.0"
+            ruby-variant:   "malloctrim"
+            debian-image:   "bullseye-slim"
+            debian-version: "11"
+            aliases: |
+              quay.io/evl.ms/fullstaq-ruby:3.2.0-malloctrim-slim
+              quay.io/evl.ms/fullstaq-ruby:3.2-malloctrim-slim
+
+          # 3.2.0 on Debian 10
+          - ruby-version:   "3.2.0"
+            ruby-variant:   "jemalloc"
+            debian-image:   "buster"
+            debian-version: "10"
+          - ruby-version:   "3.2.0"
+            ruby-variant:   "jemalloc"
+            debian-image:   "buster-slim"
+            debian-version: "10"
+          - ruby-version:   "3.2.0"
+            ruby-variant:   "malloctrim"
+            debian-image:   "buster"
+            debian-version: "10"
+          - ruby-version:   "3.2.0"
+            ruby-variant:   "malloctrim"
+            debian-image:   "buster-slim"
+            debian-version: "10"
+
+          # 3.2.0 on Debian 9
+          - ruby-version:   "3.2.0"
+            ruby-variant:   "jemalloc"
+            debian-image:   "stretch"
+            debian-version: "9"
+          - ruby-version:   "3.2.0"
+            ruby-variant:   "jemalloc"
+            debian-image:   "stretch-slim"
+            debian-version: "9"
+          - ruby-version:   "3.2.0"
+            ruby-variant:   "malloctrim"
+            debian-image:   "stretch"
+            debian-version: "9"
+          - ruby-version:   "3.2.0"
+            ruby-variant:   "malloctrim"
+            debian-image:   "stretch-slim"
+            debian-version: "9"
+
           # 3.1.3 on Debian 11
           - ruby-version:   "3.1.3"
             ruby-variant:   "jemalloc"
