--- a/.github/workflows/build-push.yml
+++ b/.github/workflows/build-push.yml
@@ -286,7 +286,7 @@ jobs:
         uses: actions/checkout@v2
       - name: Set up Docker Buildx
         id: buildx
-        uses: docker/setup-buildx-action@v1
+        uses: docker/setup-buildx-action@v2
         with:
           install: true
       - name: Cache Docker layers
@@ -300,19 +300,20 @@ jobs:
             ${{ runner.os }}-buildx-dev
       - name: Login to Quay.io
         if:   github.event_name != 'pull_request'
-        uses: docker/login-action@v1
+        uses: docker/login-action@v2
         with:
           registry: quay.io
           username: ${{ secrets.QUAY_USERNAME }}
           password: ${{ secrets.QUAY_PASSWORD }} # Get it at Settings → CLI Password
       - name: Build Docker image
         id: docker_build
-        uses: docker/build-push-action@v2
+        uses: docker/build-push-action@v4
         with:
           context: .
           file: Dockerfile
           pull: true
           push: ${{ github.event_name != 'pull_request' }}
+          provenance: false # Otherwise images can't be pulled from Quay on platforms other than linux/amd64. See https://github.com/evilmartians/fullstaq-ruby-docker/issues/22 and https://github.com/docker/buildx/issues/1533
           tags: |
             quay.io/evl.ms/fullstaq-ruby:${{ matrix.ruby-version }}-${{ matrix.ruby-variant }}-${{ matrix.debian-image }}
             ${{ matrix.aliases }}
