--- a/.github/workflows/build-push.yml
+++ b/.github/workflows/build-push.yml
@@ -17,6 +17,84 @@ jobs:
       matrix:
         include:
 
+          # 3.4.1 on Debian 12
+          - ruby-version:   "3.4.1"
+            ruby-variant:   "jemalloc"
+            debian-image:   "bookworm"
+            debian-version: "12"
+            aliases: |
+              quay.io/evl.ms/fullstaq-ruby:3.4-jemalloc
+              quay.io/evl.ms/fullstaq-ruby:3.4.1-jemalloc
+              quay.io/evl.ms/fullstaq-ruby:3.4-jemalloc-bookworm
+          - ruby-version:   "3.4.1"
+            ruby-variant:   "jemalloc"
+            debian-image:   "bookworm-slim"
+            debian-version: "12"
+            aliases: |
+              quay.io/evl.ms/fullstaq-ruby:3.4-jemalloc-slim
+              quay.io/evl.ms/fullstaq-ruby:3.4.1-jemalloc-slim
+              quay.io/evl.ms/fullstaq-ruby:3.4-jemalloc-bookworm-slim
+          - ruby-version:   "3.4.1"
+            ruby-variant:   "malloctrim"
+            debian-image:   "bookworm"
+            debian-version: "12"
+            aliases: |
+              quay.io/evl.ms/fullstaq-ruby:3.4-malloctrim
+              quay.io/evl.ms/fullstaq-ruby:3.4.1-malloctrim
+              quay.io/evl.ms/fullstaq-ruby:3.4-malloctrim-bookworm
+          - ruby-version:   "3.4.1"
+            ruby-variant:   "malloctrim"
+            debian-image:   "bookworm-slim"
+            debian-version: "12"
+            aliases: |
+              quay.io/evl.ms/fullstaq-ruby:3.4-malloctrim-slim
+              quay.io/evl.ms/fullstaq-ruby:3.4.1-malloctrim-slim
+              quay.io/evl.ms/fullstaq-ruby:3.4-malloctrim-bookworm-slim
+
+          # 3.4.1 on Debian 11
+          - ruby-version:   "3.4.1"
+            ruby-variant:   "jemalloc"
+            debian-image:   "bullseye"
+            debian-version: "11"
+            aliases: |
+              quay.io/evl.ms/fullstaq-ruby:3.4-jemalloc-bullseye
+          - ruby-version:   "3.4.1"
+            ruby-variant:   "jemalloc"
+            debian-image:   "bullseye-slim"
+            debian-version: "11"
+            aliases: |
+              quay.io/evl.ms/fullstaq-ruby:3.4-jemalloc-bullseye-slim
+          - ruby-version:   "3.4.1"
+            ruby-variant:   "malloctrim"
+            debian-image:   "bullseye"
+            debian-version: "11"
+            aliases: |
+              quay.io/evl.ms/fullstaq-ruby:3.4-malloctrim-bullseye
+          - ruby-version:   "3.4.1"
+            ruby-variant:   "malloctrim"
+            debian-image:   "bullseye-slim"
+            debian-version: "11"
+            aliases: |
+              quay.io/evl.ms/fullstaq-ruby:3.4-malloctrim-bullseye-slim
+
+          # 3.4.1 on Debian 10
+          - ruby-version:   "3.4.1"
+            ruby-variant:   "jemalloc"
+            debian-image:   "buster"
+            debian-version: "10"
+          - ruby-version:   "3.4.1"
+            ruby-variant:   "jemalloc"
+            debian-image:   "buster-slim"
+            debian-version: "10"
+          - ruby-version:   "3.4.1"
+            ruby-variant:   "malloctrim"
+            debian-image:   "buster"
+            debian-version: "10"
+          - ruby-version:   "3.4.1"
+            ruby-variant:   "malloctrim"
+            debian-image:   "buster-slim"
+            debian-version: "10"
+
           # 3.3.6 on Debian 12
           - ruby-version:   "3.3.6"
             ruby-variant:   "jemalloc"
@@ -216,54 +294,6 @@ jobs:
             ruby-variant:   "malloctrim"
             debian-image:   "buster-slim"
             debian-version: "10"
-
-          # 3.0.7 on Debian 11
-          - ruby-version:   "3.0.7"
-            ruby-variant:   "jemalloc"
-            debian-image:   "bullseye"
-            debian-version: "11"
-          - ruby-version:   "3.0.7"
-            ruby-variant:   "jemalloc"
-            debian-image:   "bullseye-slim"
-            debian-version: "11"
-          - ruby-version:   "3.0.7"
-            ruby-variant:   "malloctrim"
-            debian-image:   "bullseye"
-            debian-version: "11"
-          - ruby-version:   "3.0.7"
-            ruby-variant:   "malloctrim"
-            debian-image:   "bullseye-slim"
-            debian-version: "11"
-
-          # 3.0.7 on Debian 10
-          - ruby-version:   "3.0.7"
-            ruby-variant:   "jemalloc"
-            debian-image:   "buster"
-            debian-version: "10"
-            aliases:  |
-              quay.io/evl.ms/fullstaq-ruby:3.0.7-jemalloc
-              quay.io/evl.ms/fullstaq-ruby:3.0-jemalloc
-          - ruby-version:   "3.0.7"
-            ruby-variant:   "jemalloc"
-            debian-image:   "buster-slim"
-            debian-version: "10"
-            aliases: |
-              quay.io/evl.ms/fullstaq-ruby:3.0.7-jemalloc-slim
-              quay.io/evl.ms/fullstaq-ruby:3.0-jemalloc-slim
-          - ruby-version:   "3.0.7"
-            ruby-variant:   "malloctrim"
-            debian-image:   "buster"
-            debian-version: "10"
-            aliases:  |
-              quay.io/evl.ms/fullstaq-ruby:3.0.7-malloctrim
-              quay.io/evl.ms/fullstaq-ruby:3.0-malloctrim
-          - ruby-version:   "3.0.7"
-            ruby-variant:   "malloctrim"
-            debian-image:   "buster-slim"
-            debian-version: "10"
-            aliases: |
-              quay.io/evl.ms/fullstaq-ruby:3.0.7-malloctrim-slim
-              quay.io/evl.ms/fullstaq-ruby:3.0-malloctrim-slim
 
     steps:
       - name: Check out the repo
