Build Ruby on Debian 13 (trixie)

--- a/.github/workflows/build-push.yml
+++ b/.github/workflows/build-push.yml
@@ -17,38 +17,64 @@ jobs:
       matrix:
         include:
 
+          # 3.4.5 on Debian 13
+          - ruby-version:   "3.4.5"
+            ruby-variant:   "jemalloc"
+            debian-image:   "trixie"
+            debian-version: "13"
+            aliases: |
+              quay.io/evl.ms/fullstaq-ruby:3.4-jemalloc
+              quay.io/evl.ms/fullstaq-ruby:3.4.5-jemalloc
+              quay.io/evl.ms/fullstaq-ruby:3.4-jemalloc-trixie
+          - ruby-version:   "3.4.5"
+            ruby-variant:   "jemalloc"
+            debian-image:   "trixie-slim"
+            debian-version: "13"
+            aliases: |
+              quay.io/evl.ms/fullstaq-ruby:3.4-jemalloc-slim
+              quay.io/evl.ms/fullstaq-ruby:3.4.5-jemalloc-slim
+              quay.io/evl.ms/fullstaq-ruby:3.4-jemalloc-trixie-slim
+          - ruby-version:   "3.4.5"
+            ruby-variant:   "malloctrim"
+            debian-image:   "trixie"
+            debian-version: "13"
+            aliases: |
+              quay.io/evl.ms/fullstaq-ruby:3.4-malloctrim
+              quay.io/evl.ms/fullstaq-ruby:3.4.5-malloctrim
+              quay.io/evl.ms/fullstaq-ruby:3.4-malloctrim-trixie
+          - ruby-version:   "3.4.5"
+            ruby-variant:   "malloctrim"
+            debian-image:   "trixie-slim"
+            debian-version: "13"
+            aliases: |
+              quay.io/evl.ms/fullstaq-ruby:3.4-malloctrim-slim
+              quay.io/evl.ms/fullstaq-ruby:3.4.5-malloctrim-slim
+              quay.io/evl.ms/fullstaq-ruby:3.4-malloctrim-trixie-slim
+
           # 3.4.5 on Debian 12
           - ruby-version:   "3.4.5"
             ruby-variant:   "jemalloc"
             debian-image:   "bookworm"
             debian-version: "12"
             aliases: |
-              quay.io/evl.ms/fullstaq-ruby:3.4-jemalloc
-              quay.io/evl.ms/fullstaq-ruby:3.4.5-jemalloc
               quay.io/evl.ms/fullstaq-ruby:3.4-jemalloc-bookworm
           - ruby-version:   "3.4.5"
             ruby-variant:   "jemalloc"
             debian-image:   "bookworm-slim"
             debian-version: "12"
             aliases: |
-              quay.io/evl.ms/fullstaq-ruby:3.4-jemalloc-slim
-              quay.io/evl.ms/fullstaq-ruby:3.4.5-jemalloc-slim
               quay.io/evl.ms/fullstaq-ruby:3.4-jemalloc-bookworm-slim
           - ruby-version:   "3.4.5"
             ruby-variant:   "malloctrim"
             debian-image:   "bookworm"
             debian-version: "12"
             aliases: |
-              quay.io/evl.ms/fullstaq-ruby:3.4-malloctrim
-              quay.io/evl.ms/fullstaq-ruby:3.4.5-malloctrim
               quay.io/evl.ms/fullstaq-ruby:3.4-malloctrim-bookworm
           - ruby-version:   "3.4.5"
             ruby-variant:   "malloctrim"
             debian-image:   "bookworm-slim"
             debian-version: "12"
             aliases: |
-              quay.io/evl.ms/fullstaq-ruby:3.4-malloctrim-slim
-              quay.io/evl.ms/fullstaq-ruby:3.4.5-malloctrim-slim
               quay.io/evl.ms/fullstaq-ruby:3.4-malloctrim-bookworm-slim
 
           # 3.4.5 on Debian 11
@@ -77,38 +103,64 @@ jobs:
             aliases: |
               quay.io/evl.ms/fullstaq-ruby:3.4-malloctrim-bullseye-slim
 
+          # 3.3.8 on Debian 13
+          - ruby-version:   "3.3.8"
+            ruby-variant:   "jemalloc"
+            debian-image:   "trixie"
+            debian-version: "13"
+            aliases: |
+              quay.io/evl.ms/fullstaq-ruby:3.3-jemalloc
+              quay.io/evl.ms/fullstaq-ruby:3.3.8-jemalloc
+              quay.io/evl.ms/fullstaq-ruby:3.3-jemalloc-trixie
+          - ruby-version:   "3.3.8"
+            ruby-variant:   "jemalloc"
+            debian-image:   "trixie-slim"
+            debian-version: "13"
+            aliases: |
+              quay.io/evl.ms/fullstaq-ruby:3.3-jemalloc-slim
+              quay.io/evl.ms/fullstaq-ruby:3.3.8-jemalloc-slim
+              quay.io/evl.ms/fullstaq-ruby:3.3-jemalloc-trixie-slim
+          - ruby-version:   "3.3.8"
+            ruby-variant:   "malloctrim"
+            debian-image:   "trixie"
+            debian-version: "13"
+            aliases: |
+              quay.io/evl.ms/fullstaq-ruby:3.3-malloctrim
+              quay.io/evl.ms/fullstaq-ruby:3.3.8-malloctrim
+              quay.io/evl.ms/fullstaq-ruby:3.3-malloctrim-trixie
+          - ruby-version:   "3.3.8"
+            ruby-variant:   "malloctrim"
+            debian-image:   "trixie-slim"
+            debian-version: "13"
+            aliases: |
+              quay.io/evl.ms/fullstaq-ruby:3.3-malloctrim-slim
+              quay.io/evl.ms/fullstaq-ruby:3.3.8-malloctrim-slim
+              quay.io/evl.ms/fullstaq-ruby:3.3-malloctrim-trixie-slim
+
           # 3.3.8 on Debian 12
           - ruby-version:   "3.3.8"
             ruby-variant:   "jemalloc"
             debian-image:   "bookworm"
             debian-version: "12"
             aliases: |
-              quay.io/evl.ms/fullstaq-ruby:3.3-jemalloc
-              quay.io/evl.ms/fullstaq-ruby:3.3.8-jemalloc
               quay.io/evl.ms/fullstaq-ruby:3.3-jemalloc-bookworm
           - ruby-version:   "3.3.8"
             ruby-variant:   "jemalloc"
             debian-image:   "bookworm-slim"
             debian-version: "12"
             aliases: |
-              quay.io/evl.ms/fullstaq-ruby:3.3-jemalloc-slim
-              quay.io/evl.ms/fullstaq-ruby:3.3.8-jemalloc-slim
               quay.io/evl.ms/fullstaq-ruby:3.3-jemalloc-bookworm-slim
           - ruby-version:   "3.3.8"
             ruby-variant:   "malloctrim"
             debian-image:   "bookworm"
             debian-version: "12"
             aliases: |
-              quay.io/evl.ms/fullstaq-ruby:3.3-malloctrim
-              quay.io/evl.ms/fullstaq-ruby:3.3.8-malloctrim
               quay.io/evl.ms/fullstaq-ruby:3.3-malloctrim-bookworm
           - ruby-version:   "3.3.8"
             ruby-variant:   "malloctrim"
             debian-image:   "bookworm-slim"
             debian-version: "12"
             aliases: |
-              quay.io/evl.ms/fullstaq-ruby:3.3-malloctrim-slim
-              quay.io/evl.ms/fullstaq-ruby:3.3.8-malloctrim-slim
               quay.io/evl.ms/fullstaq-ruby:3.3-malloctrim-bookworm-slim
 
           # 3.3.8 on Debian 11
@@ -137,30 +189,35 @@ jobs:
             aliases: |
               quay.io/evl.ms/fullstaq-ruby:3.3-malloctrim-bullseye-slim
 
+
           # 3.2.8 on Debian 12
           - ruby-version:   "3.2.8"
             ruby-variant:   "jemalloc"
             debian-image:   "bookworm"
             debian-version: "12"
             aliases: |
+              quay.io/evl.ms/fullstaq-ruby:3.2-jemalloc
               quay.io/evl.ms/fullstaq-ruby:3.2-jemalloc-bookworm
           - ruby-version:   "3.2.8"
             ruby-variant:   "jemalloc"
             debian-image:   "bookworm-slim"
             debian-version: "12"
             aliases: |
+              quay.io/evl.ms/fullstaq-ruby:3.2-jemalloc-slim
               quay.io/evl.ms/fullstaq-ruby:3.2-jemalloc-bookworm-slim
           - ruby-version:   "3.2.8"
             ruby-variant:   "malloctrim"
             debian-image:   "bookworm"
             debian-version: "12"
             aliases: |
+              quay.io/evl.ms/fullstaq-ruby:3.2-malloctrim
               quay.io/evl.ms/fullstaq-ruby:3.2-malloctrim-bookworm
           - ruby-version:   "3.2.8"
             ruby-variant:   "malloctrim"
             debian-image:   "bookworm-slim"
             debian-version: "12"
             aliases: |
+              quay.io/evl.ms/fullstaq-ruby:3.2-malloctrim-slim
               quay.io/evl.ms/fullstaq-ruby:3.2-malloctrim-bookworm-slim
 
           # 3.2.8 on Debian 11
@@ -169,29 +226,25 @@ jobs:
             debian-image:   "bullseye"
             debian-version: "11"
             aliases:  |
-              quay.io/evl.ms/fullstaq-ruby:3.2.8-jemalloc
-              quay.io/evl.ms/fullstaq-ruby:3.2-jemalloc
+              quay.io/evl.ms/fullstaq-ruby:3.2-jemalloc-bullseye
           - ruby-version:   "3.2.8"
             ruby-variant:   "jemalloc"
             debian-image:   "bullseye-slim"
             debian-version: "11"
             aliases: |
-              quay.io/evl.ms/fullstaq-ruby:3.2.8-jemalloc-slim
-              quay.io/evl.ms/fullstaq-ruby:3.2-jemalloc-slim
+              quay.io/evl.ms/fullstaq-ruby:3.2-jemalloc-slim-bullseye
           - ruby-version:   "3.2.8"
             ruby-variant:   "malloctrim"
             debian-image:   "bullseye"
             debian-version: "11"
             aliases:  |
-              quay.io/evl.ms/fullstaq-ruby:3.2.8-malloctrim
-              quay.io/evl.ms/fullstaq-ruby:3.2-malloctrim
+              quay.io/evl.ms/fullstaq-ruby:3.2-malloctrim-bullseye
           - ruby-version:   "3.2.8"
             ruby-variant:   "malloctrim"
             debian-image:   "bullseye-slim"
             debian-version: "11"
             aliases: |
-              quay.io/evl.ms/fullstaq-ruby:3.2.8-malloctrim-slim
-              quay.io/evl.ms/fullstaq-ruby:3.2-malloctrim-slim
+              quay.io/evl.ms/fullstaq-ruby:3.2-malloctrim-slim-bullseye
 
           # 3.1.7 on Debian 11
           - ruby-version:   "3.1.7"
